# git-file-identifiers

./: .gitignore  README.md
esm/: .eslintrc.json  README.md  examples.mjs  git-identify.mjs  git-identify.test.mjs  integration.test.mjs  jest.config.mjs  package.json  test-helpers.mjs  types.d.ts
mjs/: README.md  package.json
mjs/src/: batch.mjs  change-detection.mjs  errors.mjs  git-identify.mjs  identifier.mjs
mjs/src/metadata/: github.mjs  local.mjs  normalizer.mjs
mjs/src/utils/: git.mjs  hash.mjs  path.mjs  url.mjs
py/: .gitignore  README.md  TEST_REPORT.md  example.py  pyproject.toml  requirements.txt  setup.py
py/git_identify/: batch.py  change_detection.py  cli.py  errors.py  identifier.py  objects.py  repository.py  url_builder.py
py/git_identify/metadata/: github.py  local.py  normalizer.py
py/git_identify/utils/: git.py  hash.py  path.py  url.py
py/tests/: test_git_file_id.py  test_integration.py  test_objects.py  test_repository.py  test_url_builder.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/src/git/: mod.rs  objects.rs  repository.rs  url_builder.rs
rust/tests/: integration_test.rs
spec/: spec-0.0.1.md  spec-2.0.1.md
