[package]
name = "git-identify"
version = "0.0.1"
edition = "2021"
authors = ["Git Identify Contributors"]
description = "A Rust library for Git repository operations, GitHub URL generation, and Git object manipulation"
license = "MIT"
repository = "https://github.com/yourusername/git-identify"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
git2 = { version = "0.18", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1